--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
 </head>
 <body>
 
+
+	<header>
+		<h1>Contactez-nous</h1>
+		<p>Une question ? Écrivez-nous un message</p>
+	</header>
+
+
+<form>
+	
+</form>
+
+
+<section>
+	
+</section>
+
+
+<footer>
+	
+</footer>
+
+
 </body>
 <script type="text/javascript" src="script.js"></script>
 </html>
