--- a/index.html
+++ b/index.html
@@ -15,20 +15,35 @@
 	</header>
 
 
-<form>
+	<section>
+		<div id="section_haut">
+			<h2>Contact</h2>
+			<p id="info">Voici nos informations de contact<p>
+		</div>
+		<div id="section_bas">
+			<div id="section_image">
+				<img id="tel" src="assets/media/tel.svg">
+				<img id="mail" src="assets/media/mail.svg">
+				<img id="pin" src="assets/media/pin.svg">
+			</div>
+			<div id="section_p">
+				<p >06 49 13 01 97</p>
+				<p >flomoulun@gmx.fr</p>
+				<p >Besançon</p>
+			</div>
+			
+		</div>
+
+		<div>
+			
+		</div>
 	
-</form>
+	</section>
 
 
-<section>
+	<form>
 	
-</section>
-
-
-<footer>
-	
-</footer>
-
+	</form>
 
 </body>
 <script type="text/javascript" src="script.js"></script>
