--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
 			
 		</div>
 
-		<div>
-			
-		</div>
+		
 	
 	</section>
 
@@ -44,6 +42,13 @@
 	<form>
 	
 	</form>
+	
+	<div id="footer">
+			<img src="assets/media/twitter.svg">
+			<img src="assets/media/linkedin.svg">
+			<img src="assets/media/facebook.svg">
+			<img src="assets/media/github.svg">
+		</div>
 
 </body>
 <script type="text/javascript" src="script.js"></script>
