--- a/index.html
+++ b/index.html
@@ -14,42 +14,41 @@
 		<p>Une question ? Écrivez-nous un message</p>
 	</header>
 
-
-	<section>
-		<div id="section_haut">
-			<h2>Contact</h2>
-			<p id="info">Voici nos informations de contact<p>
-		</div>
-		<div id="section_bas">
-			<div id="section_image">
-				<img id="tel" src="assets/media/tel.svg">
-				<img id="mail" src="assets/media/mail.svg">
-				<img id="pin" src="assets/media/pin.svg">
+	<main>
+		<section>
+			<div id="section_haut">
+				<h2>Contact</h2>
+				<p id="info">Voici nos informations de contact<p>
 			</div>
-			<div id="section_p">
-				<p >06 49 13 01 97</p>
-				<p >flomoulun@gmx.fr</p>
-				<p >Besançon</p>
-			</div>
-			
-		</div>
-
+			<div id="section_bas">
+				<div id="section_image">
+					<img id="tel" src="assets/media/tel.svg">
+					<img id="mail" src="assets/media/mail.svg">
+					<img id="pin" src="assets/media/pin.svg">
+				</div>
+				<div id="section_p">
+					<p >06 49 13 01 97</p>
+					<p >flomoulun@gmx.fr</p>
+					<p >Besançon</p>
+				</div>
 		
-	
-	</section>
-
-
-	<form>
-	
-	</form>
-	
-	<div id="footer">
+			</div>
+				<div id="footer">
 			<img src="assets/media/twitter.svg">
 			<img src="assets/media/linkedin.svg">
 			<img src="assets/media/facebook.svg">
 			<img src="assets/media/github.svg">
 		</div>
+		</section>
 
+
+		<form>
+
+	
+		</form>
+	</main>
+
+	
 </body>
 <script type="text/javascript" src="script.js"></script>
 </html>
