--- a/index.html
+++ b/index.html
@@ -43,8 +43,47 @@
 
 
 		<form>
-
-	
+			<div id="form_top">
+				<div>
+					<div id="nom">
+						<img class="image" id="image_nom" src="assets/media/nom.svg">
+						<p>Nom</p>
+					</div>
+					<input type="text">
+				</div>
+				<div>
+						<div id="prenom">
+							<img class="image" id="image_prenom" src="assets/media/prenom.svg">
+							<p>Prenom</p>
+						</div>
+						<input type="text">
+				</div>	
+			</div>
+			<div id="form_middle">
+				<div>
+					<div id="mail">
+						<img class="image"  src="assets/media/mail_gris.svg">
+						<p id="pmail">Mail</p>
+					</div>
+					<input type="text">
+				</div>
+				<div>
+					<div id="tel">
+						<img class="image" id="image_tel" src="assets/media/tel_gris.svg">
+						<p>Téléphone</p>
+					</div>
+					<input type="text">
+				</div>
+			</div>
+			<div id="form_bottom">
+				<p>Message</p>
+				<textarea></textarea>
+			</div>
+			<div id="form_footer">
+				<div id="button">
+					<p>Valider</p>
+				</div>
+			</div>
 		</form>
 	</main>
 
