--- a/index.html
+++ b/index.html
@@ -20,19 +20,29 @@
 				<h2>Contact</h2>
 				<p id="info">Voici nos informations de contact<p>
 			</div>
-			<div id="section_bas">
-				<div id="section_image">
-					<img id="tel" src="assets/media/tel.svg">
-					<img id="mail" src="assets/media/mail.svg">
-					<img id="pin" src="assets/media/pin.svg">
-				</div>
+
+
+
+
+
+		
 				<div id="section_p">
-					<p >06 49 13 01 97</p>
-					<p >flomoulun@gmx.fr</p>
-					<p >Besançon</p>
+					<div id="telhover">
+						<img id="tel"  src="assets/media/tel.svg">
+						<p id="telp">06 49 13 01 97</p>
+					</div>
+					<div id="mailhover">
+						<img id="mail" src="assets/media/mail.svg">
+						<p id="mailp">flomoulun@gmx.fr</p>
+					</div>	
+					<div id="pinhover">
+						<img id="pin" src="assets/media/pin.svg">
+						<p id="pinp">Besançon</p>
+					</div>
 				</div>
 		
 			</div>
+			
 				<div id="footer">
 			<img src="assets/media/twitter.svg">
 			<img src="assets/media/linkedin.svg">
