--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
 				<p id="info">Voici nos informations de contact<p>
 			</div>
 
-
-
-
-
-		
 				<div id="section_p">
 					<div id="telhover">
 						<img id="tel"  src="assets/media/tel.svg">
@@ -42,13 +37,21 @@
 				</div>
 		
 			</div>
-			
-				<div id="footer">
-			<img src="assets/media/twitter.svg">
-			<img src="assets/media/linkedin.svg">
-			<img src="assets/media/facebook.svg">
-			<img src="assets/media/github.svg">
-		</div>
+
+			<div id="footer">
+				<div class="imagehover">
+					<img  src="assets/media/twitter.svg">
+				</div>
+				<div class="imagehover">
+					<img  src="assets/media/linkedin.svg">
+				</div>
+				<div class="imagehover">
+					<img  src="assets/media/facebook.svg">
+				</div>
+				<div class="imagehover">
+					<img  src="assets/media/github.svg">
+				</div>
+			</div>
 		</section>
 
 
