--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
 				<div id="section_p">
 					<div id="telhover">
-						<img id="tel"  src="assets/media/tel.svg">
+						<img id="telo"  src="assets/media/tel.svg">
 						<p id="telp">06 49 13 01 97</p>
 					</div>
 					<div id="mailhover">
-						<img id="mail" src="assets/media/mail.svg">
+						<img id="mailo" src="assets/media/mail.svg">
 						<p id="mailp">flomoulun@gmx.fr</p>
 					</div>	
 					<div id="pinhover">
-						<img id="pin" src="assets/media/pin.svg">
+						<img id="pino" src="assets/media/pin.svg">
 						<p id="pinp">Besançon</p>
 					</div>
 				</div>
