--- a/index.html
+++ b/index.html
@@ -46,43 +46,47 @@
 			<div id="form_top">
 				<div>
 					<div id="nom">
+						<img id="nom_rose" src="assets/media/nom_rose.svg">
 						<img class="image" id="image_nom" src="assets/media/nom.svg">
 						<p>Nom</p>
 					</div>
-					<input type="text">
+					<input id="input_nom" type="text">
 				</div>
 				<div>
 						<div id="prenom">
+							<img id="prenom_rose" src="assets/media/prenom_rose.svg">
 							<img class="image" id="image_prenom" src="assets/media/prenom.svg">
 							<p>Prenom</p>
 						</div>
-						<input type="text">
+						<input id="input_prenom" type="text">
 				</div>	
 			</div>
 			<div id="form_middle">
 				<div>
 					<div id="mail">
-						<img class="image"  src="assets/media/mail_gris.svg">
+						<img id="mail_rose" src="assets/media/mail.svg">
+						<img class="image" id="image_mail"  src="assets/media/mail_gris.svg">
 						<p id="pmail">Mail</p>
 					</div>
-					<input type="text">
+					<input id="input_mail" type="text">
 				</div>
 				<div>
 					<div id="tel">
+						<img id="tel_rose" src="assets/media/tel.svg">
 						<img class="image" id="image_tel" src="assets/media/tel_gris.svg">
 						<p>Téléphone</p>
 					</div>
-					<input type="text">
+					<input id="input_tel" type="text">
 				</div>
 			</div>
 			<div id="form_bottom">
 				<p>Message</p>
-				<textarea></textarea>
+				<textarea id="textarea"></textarea>
 			</div>
 			<div id="form_footer">
-				<div id="button">
+				<button id="button">
 					<p>Valider</p>
-				</div>
+				</button>
 			</div>
 		</form>
 	</main>
