--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 						<p>Nom</p>
 					</div>
 					<input id="input_nom" type="text">
+					<p id="nom_vide"></p>
 				</div>
 				<div>
 						<div id="prenom">
@@ -59,16 +60,18 @@
 							<p>Prenom</p>
 						</div>
 						<input id="input_prenom" type="text">
+						<p id="prenom_vide"></p>
 				</div>	
 			</div>
 			<div id="form_middle">
 				<div>
 					<div id="mail">
 						<img id="mail_rose" src="assets/media/mail.svg">
-						<img class="image" id="image_mail"  src="assets/media/mail_gris.svg">
+						<img class="image" id="image_mail"  src="assets/media/mail_gris.svg" >
 						<p id="pmail">Mail</p>
 					</div>
 					<input id="input_mail" type="text">
+					<p id="mail_vide"></p>
 				</div>
 				<div>
 					<div id="tel">
@@ -77,16 +80,18 @@
 						<p>Téléphone</p>
 					</div>
 					<input id="input_tel" type="text">
+					<p id="tel_vide"></p>
 				</div>
 			</div>
 			<div id="form_bottom">
 				<p>Message</p>
 				<textarea id="textarea"></textarea>
+				<p id="message_vide"></p>
 			</div>
 			<div id="form_footer">
-				<button id="button">
+				<div id="button">
 					<p>Valider</p>
-				</button>
+				</div>
 			</div>
 		</form>
 	</main>
