--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
 				<div id="section_p">
 					<div id="telhover">
-						<img id="telo"  src="assets/media/tel.svg">
+						<img id="telo"  src="assets/media/tel.svg" alt="logo telephone rose">
 						<p id="telp">06 49 13 01 97</p>
 					</div>
 					<div id="mailhover">
-						<img id="mailo" src="assets/media/mail.svg">
+						<img id="mailo" src="assets/media/mail.svg" alt="logo mail rose">
 						<p id="mailp">flomoulun@gmx.fr</p>
 					</div>	
 					<div id="pinhover">
-						<img id="pino" src="assets/media/pin.svg">
+						<img id="pino" src="assets/media/pin.svg" alt="logo de la localisation">
 						<p id="pinp">Besançon</p>
 					</div>
 				</div>
@@ -46,8 +46,8 @@
 			<div id="form_top">
 				<div>
 					<div id="nom">
-						<img id="nom_rose" src="assets/media/nom_rose.svg">
-						<img class="image" id="image_nom" src="assets/media/nom.svg">
+						<img id="nom_rose" src="assets/media/nom_rose.svg" alt="logo haut du corp d'un homme et un rond avec un i à l'interieur rose">
+						<img class="image" id="image_nom" src="assets/media/nom.svg" alt="logo haut du corp d'un homme et un rond avec un i à l'interieur">
 						<p>Nom</p>
 					</div>
 					<input id="input_nom" type="text">
@@ -55,8 +55,8 @@
 				</div>
 				<div>
 						<div id="prenom">
-							<img id="prenom_rose" src="assets/media/prenom_rose.svg">
-							<img class="image" id="image_prenom" src="assets/media/prenom.svg">
+							<img id="prenom_rose" src="assets/media/prenom_rose.svg" alt="logo haut du corp d'un homme et une fleche rose">
+							<img class="image" id="image_prenom" src="assets/media/prenom.svg" alt="logo haut du corp d'un homme et une fleche">
 							<p>Prenom</p>
 						</div>
 						<input id="input_prenom" type="text">
@@ -66,8 +66,8 @@
 			<div id="form_middle">
 				<div>
 					<div id="mail">
-						<img id="mail_rose" src="assets/media/mail.svg">
-						<img class="image" id="image_mail"  src="assets/media/mail_gris.svg" >
+						<img id="mail_rose" src="assets/media/mail.svg" alt="logo rose mail">
+						<img class="image" id="image_mail"  src="assets/media/mail_gris.svg" alt="logo gris mail">
 						<p id="pmail">Mail</p>
 					</div>
 					<input id="input_mail" type="text">
@@ -75,8 +75,8 @@
 				</div>
 				<div>
 					<div id="tel">
-						<img id="tel_rose" src="assets/media/tel.svg">
-						<img class="image" id="image_tel" src="assets/media/tel_gris.svg">
+						<img id="tel_rose" src="assets/media/tel.svg" alt="logo de telephone rose">
+						<img class="image" id="image_tel" src="assets/media/tel_gris.svg" alt="logo de telephone gris">
 						<p>Téléphone</p>
 					</div>
 					<input id="input_tel" type="text">
@@ -97,16 +97,16 @@
 	</main>
 		<div id="footer">
 				<div class="imagehover">
-					<img  src="assets/media/twitter.svg">
+					<img  src="assets/media/twitter.svg" alt="logo de twitter">
 				</div>
 				<div class="imagehover">
-					<img  src="assets/media/linkedin.svg">
+					<img  src="assets/media/linkedin.svg" alt="logo de linkedin">
 				</div>
 				<div class="imagehover">
-					<img  src="assets/media/facebook.svg">
+					<img  src="assets/media/facebook.svg" alt="logo de facebook">
 				</div>
 				<div class="imagehover">
-					<img  src="assets/media/github.svg">
+					<img  src="assets/media/github.svg" alt="logo de github">
 				</div>
 			</div>
 <script type="text/javascript" src="script.js"></script>
