--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</section>
 
 
-		<form>
+		<form onsubmit="return send()" method="get" name="form">
 			<div id="form_top">
 				<div>
 					<div id="nom">
@@ -91,7 +91,7 @@
 			</div>
 			<div id="form_footer">
 				<div id="button">
-					<p>Valider</p>
+					Valider
 				</div>
 			</div>
 		</form>
