--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</section>
 
 
-		<form  method="post" name="form">
+		<form method="post">
 			<div id="form_top">
 				<div>
 					<div id="nom">
@@ -51,7 +51,7 @@
 						<img class="image" id="image_nom" src="assets/media/nom.svg" alt="logo haut du corp d'un homme et un rond avec un i à l'interieur">
 						<p>Nom</p>
 					</div>
-					<input id="input_nom" type="text" pattern="[A-Z]+" minlength="3" maxlength="15" name="nomform">
+					<input id="input_nom" type="text" pattern="[a-zA-Z]+" minlength="3" maxlength="15" name="nomform">
 					<p id="nom_vide"></p>
 				</div>
 				<div>
@@ -71,7 +71,7 @@
 						<img class="image" id="image_mail"  src="assets/media/mail_gris.svg" alt="logo gris mail">
 						<p id="pmail">Mail</p>
 					</div>
-					<input id="input_mail" type="text" pattern="(\w\.?)+@[\w\.-]+\.\w{2,}" maxlength="30" name="mailform">
+					<input id="input_mail" type="email" pattern="(\w\.?)+@[\w\.-]+\.\w{2,}" maxlength="30" name="mailform">
 					<p id="mail_vide"></p>
 				</div>
 				<div>
@@ -80,7 +80,7 @@
 						<img class="image" id="image_tel" src="assets/media/tel_gris.svg" alt="logo de telephone gris">
 						<p>Téléphone</p>
 					</div>
-					<input id="input_tel" type="text" pattern="[0-9]" maxlength="10">
+					<input id="input_tel" type="tel" pattern="/^(^[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}$)|(^[0-9]{10}$)|(^[0-9]{2}.[0-9]{2}.[0-9]{2}.[0-9]{2}.[0-9]{2}$)|(^\+[0-9]{1,3}(| )([0-9]{9})|([0-9]{1} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2})|(^(\([0-9]{3}\)|[0-9]{3})(| )([0-9]{3})(| |-)([0-9]{4})$))$/im;" maxlength="10" name="telform">
 					<p id="tel_vide"></p>
 				</div>
 			</div>
@@ -90,24 +90,25 @@
 				<p id="message_vide"></p>
 			</div>
 			<div id="form_footer">
-				<button type="submit" id="button">
-					<p>Valider</p>
+				<button type="submit" id="button" name="button">
+					<p id="mailValid">Valider</p>
 				</button>
+
 			</div>
 		</form>
 	</main>
 		<div id="footer">
 				<div class="imagehover">
-					<img class="imagefooter" src="assets/media/twitter.svg" alt="logo de twitter">
+					<a href="https://twitter.com/home" target="_blank"><img class="imagefooter" src="assets/media/twitter.svg" alt="logo de twitter"></a>
 				</div>
 				<div class="imagehover">
-					<img class="imagefooter" src="assets/media/linkedin.svg" alt="logo de linkedin">
+					<a href="https://www.linkedin.com/feed/" target="_blank"><img class="imagefooter" src="assets/media/linkedin.svg" alt="logo de linkedin"></a>
 				</div>
 				<div class="imagehover">
-					<img class="imagefooter"  src="assets/media/facebook.svg" alt="logo de facebook">
+					<a href="https://www.facebook.com/" target="_blank"><img class="imagefooter"  src="assets/media/facebook.svg" alt="logo de facebook"></a>
 				</div>
 				<div class="imagehover">
-					<img class="imagefooter" src="assets/media/github.svg" alt="logo de github">
+					<a href="https://github.com/" target="_blank"><img class="imagefooter" src="assets/media/github.svg" alt="logo de github"></a>
 				</div>
 			</div>
 <script type="text/javascript" src="script.js"></script>
